/*
 * $Id: ChangeLog,v 1.2610 2004/03/20 03:14:51 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-20 17:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapi.h
    ! fixes for XCC:
      + add definition of _I64_MIN and _I64_MAX when not defined
      + add function protos _inp() and _outp()

  * source/rtl/fparse.c
    ! minor modification to not ltrim() passed string in hb_ParseLine()

2004-03-19 19:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    ! Fixed GPF Trap in __dbDelim()
    % Optimized __dbDelim()

  /* Andi please note that you can NEVER use:

         hb_strupr( pParam->item.asString.value )

     The reason is the hb_strupr() converts to upper IN-PLACE, but the Paramater may be a STATIC String.
     This is a very bad GPF Trap. Additionally please review the above change to see more efficent handling
     of short strings. Remeber Strings are ARRAYS of characters.
  */

2004-03-19 16:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed HB_P_POPVARIABLE to always use MEMVAR Context - Clipper compatibility.

   /*
      G., While fixing the above I noticed orphan, useless MT branch, which was supposed to
      mangle the Variable Name to reflect ThreadID, but it was not really doing anything.

      There were 3 problems:

      1. The retrieved pDyn was never used in subsequent code.
      2. If the Name was not found it still requires creation of new Var with the mangled name.
      3. This PCode appears to have been the ONLY one with such branch, there for missing in HB_P_PUSHVARIABLE and others.

      So I just deleted the code, as i was not functional in any case - Please review.
     */

2004-03-19 22:53 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * doc/hblog.txt
    ! Fixed typos (again).

  * xdiff.txt