@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2610 2004/03/20 03:14:51 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2611 2004/03/20 10:44:23 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-20 19:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/macro/macroslx.c
+    ! fix directive to SLX_RULES for XCC
+
 2004-03-20 17:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * include/hbapi.h
     ! fixes for XCC:
